Updated demo, font bugfixes

--- a/undertale.css
+++ b/undertale.css
@@ -108,7 +108,7 @@ Font Credits:
 .ut-damage {
 	/* For text that should resemble the damage text */
 	color:white;
-	font-family:Hachiro,"OCR A Extended","OCR A","Goudy Stout",Impact,Arial,sans-serif;
+	font-family:Hachicro,"OCR A Extended","OCR A","Goudy Stout",Impact,Arial,sans-serif;
 }
 .ut-action {
 	/* For text that should resemble the UT combat options */
