--- a/undertale.css
+++ b/undertale.css
@@ -4,6 +4,8 @@ Font Credits:
 	Monster Friend (Fore/Back): https://www.behance.net/gallery/31378523/Monster-Friend-Undertale-Logo-Font
 	MNC: [WARNING: I changed the name of this font because the original was NSFW, and thus not very professional - go to link at own discresion] http://auntiepixelante.com/?p=606
 	Mercy: http://maxigamer.deviantart.com/art/MERCY-Font-the-UNDERTALE-font-for-battle-buttons-590779512
+	Crypt of Tomorrow: http://auntiepixelante.com/?p=239
+	Hachicro: http://www.dafont.com/hachicro.font
 
 	src:url("fonts/x/x.eot?") format("eot"),url("fonts/x/x.woff") format("woff"),url("fonts/x/x.otf") format("opentype");
 */
@@ -57,21 +59,19 @@ Font Credits:
 	font-family:"Monster Friend Back","Monster Friend Fore",Arial,sans-serif;
 	font-size:2.35em;
 }
-.ut-title::before {
-	color:#e90111;
+.ut-title::before, .ut-title::after {
 	font-family:"Monster Friend Fore","Monster Friend Back",Arial,sans-serif;
-	content:attr(data-hearts);
 	position:absolute;
 	left:0;
 	top:0;
 }
+.ut-title::before {
+	color:#e90111;
+	content:attr(data-hearts);
+}
 .ut-title::after {
 	color:white;
-	font-family:"Monster Friend Fore","Monster Friend Back",Arial,sans-serif;
 	content:attr(data-text);
-	position:absolute;
-	left:0;
-	top:0;
 }
 /* todo game over text */
 .ut-title-basic-fore {
@@ -135,7 +135,6 @@ Font Credits:
 }
 .ut-button {
 	font-size:1.5em;
-	content:
 }
 .ut-button-small {
 	font-size:1em;
